trying to fix word wrap issue

--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -42,7 +42,9 @@ h1, h2, h3 {
 }
 
 pre {
+	word-break: break-all;
 	word-wrap: break-word;
+	white-space: pre;
 	white-space: pre-wrap;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 16px;
